<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shruj.splash.ResultActivity">

    <TextView
        android:id="@+id/textViewQuizResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/textViewQuizResult"
        android:textColor="#0b0101"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayoutImageView"
        android:layout_alignTop="@+id/textViewQuizResult"
        android:layout_toEndOf="@+id/textViewQuizResult"
        android:textColor="#0fb591"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewGeeknessDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_above="@+id/linearLayoutQuizButtons"
        android:layout_centerHorizontal="true"
        android:textColor="#0d0101" />

    <LinearLayout
        android:id="@+id/linearLayoutImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="250dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageViewResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/textViewQuizResult"
            android:layout_below="@+id/textViewQuizResult"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true" />
    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/textViewGeeknessDescription"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="15sp"-->
    <!--android:layout_below="@+id/linearLayoutQuizButtons"-->
    <!--android:layout_toEndOf="@+id/textViewQuizResult" />-->

    <LinearLayout
        android:id="@+id/linearLayoutQuizButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/buttonQuitResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/buttonQuit" />

        <Button
            android:id="@+id/buttonTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/buttonTryAgain" />
    </LinearLayout>

</RelativeLayout>
